@@ -849,6 +849,10 @@ LATEXFILTER_FILTER_NAME=LaTeX Files
 # PoFilter.java
 
 POFILTER_FILTER_NAME=PO Files
+POFILTER_OPTIONS_TITLE=PO Filter Options
+POFILTER_ALLOW_BLANK=Allow blank translations in the target files
+POFILTER_EXCEPTION=The PO filter threw an exception:
+POFILTER_INVALID_FORMAT=Invalid file format
 
 # RcFilter.java
 
@@ -1435,3 +1439,4 @@ LT_OPTIONS_MENU_ENABLED=Language Checker
 
 # org.omegat.gui.dialogs.TeamOptionsDialog
 PROXY_LOGIN_DIALOG=Proxy User and Password
+POFILTER_SALLOW_BLANK=Write msgstr for untranslated segments
